# rustic-airlines

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
clients-link/: Cargo.toml
driver/: Cargo.toml
flight-sim/: Cargo.toml
gossip/: Cargo.toml  README.md
graphical-interface/: Cargo.toml  airports_ar.csv
graphical-interface/examples/: airports.rs
graphical-interface/src/: db.rs  lib.rs  main.rs  map.rs  state.rs
graphical-interface/src/plugins/: airports.rs  flights.rs  mod.rs
graphical-interface/src/types/: airport.rs  country_tracker.rs  flight.rs  flight_info.rs  flight_status.rs  map_bounds.rs  mod.rs
graphical-interface/src/widgets/: add_flight.rs  airport.rs  airports.rs  flight.rs  flights_table.rs  mod.rs
internode_protocol/: Cargo.toml
native_protocol/: Cargo.toml  README.md
node/: Cargo.toml
node/src/: errors.rs  internode_protocol_handler.rs  keyspace.rs  lib.rs  messages.rs  open_query_handler.rs  query_execution.rs  table.rs  utils.rs
node/src/internode_protocol/: message.rs  query.rs  response.rs
node/src/query_execution/: alter_keyspace.rs  alter_table.rs  create_keyspace.rs  create_table.rs  delete.rs  drop_keyspace.rs  drop_table.rs  insert.rs  mod.rs  select.rs  update.rs  use_cql.rs
node/src/storage_engine/: data_redistribution.rs  delete.rs  errors.rs  insert.rs  keyspace_operations.rs  mod.rs  select.rs  table_operations.rs  update.rs
node_2/: Cargo.toml
node_launcher/: Makefile  run.bat  seed_nodes.txt
rustic-airlines/node/: Cargo.toml
rustic-airlines/node/src/: errors.rs  internode_protocol_handler.rs  keyspace.rs  lib.rs  query_execution.rs  table.rs  utils.rs
(+293 files in other folders)
