[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencias específicas para el crate `node`
partitioner = { path = "../partitioner" }  # Ejemplo de cómo referenciar la librería `partitioner`
query-creator = { path = "../query-creator" }  # Ejemplo de cómo referenciar la librería `partitioner`
driver = { path = "../driver" }
native_protocol = { path = "../native_protocol" }